Added tests